# TCP-Chat

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/client/: TCPClient.cpp
src/my_chat_lib/: CMakeLists.txt
src/my_chat_lib/my_chat_lib/: MCL.cpp  MCL.hpp
src/server/: CMakeLists.txt
src/server/server/: TCPServer.cpp
